feature: Combine templating view for admin, with user page, to generate apply from template
